# nannos

./: .gitattributes  .gitignore  .gitlab-ci.yml  .zenodo.json  Makefile  README.rst  badges.json  environment-gpu.yml  environment.yml  setup.cfg
.ipynb_checkpoints/: plot_tutorial-checkpoint.ipynb
dev/: delete_artifacts.py  installreq  plot_banner.py  requirements.txt  testenv.py  update_header.py
doc/: Makefile  api.rst  biblio.rst  conf.py  index.rst  installation.rst  license.rst  package-lock.json  postprocess.py  reference.rst  requirements.txt
doc/_assets/: binder_badge.rst  nannos.base64
doc/_custom/: nann.mplstyle  nannos.mplstyle
doc/_custom/latex/: biblio.bib  gyptis.sty  nannos.sty
doc/_templates/: class.rst  footer.html  function.rst  home.html  layout.html  simple.rst
doc/binder/: README.md  apt.txt  install_fonts  postBuild
doc/texlive/: texlive.profile  texlive_install.sh  texlive_packages
examples/: README.rst
examples/basic/: GaP_Aspnes.csv  README.rst  README.txt  _plot_1d_grating.py  _test_tangent_field.py  mim.py  mpl  optim_order.py  plot_1d_grating.py  plot_convergence.py  plot_conversion_eff.py  plot_double_phc.py  plot_ellipse.py  plot_hole.py  plot_optim.py  plot_optim_order.py  plot_square_patch.py  plot_stress.py  plot_tangent.py
examples/benchmarks/: README.rst  README.txt  benchmarks.py  plot_benchmarks.py  plot_kaggle.py  plot_modal.py  run.sh
examples/benchmarks/1/: benchmark_autograd_cpu.npz  benchmark_jax_cpu.npz  benchmark_numpy_cpu.npz  benchmark_scipy_cpu.npz  benchmark_torch_cpu.npz  benchmark_torch_cuda.npz
examples/benchmarks/16/: benchmark_autograd_cpu.npz  benchmark_jax_cpu.npz  benchmark_numpy_cpu.npz  (+3 more)
examples/dev/: _batch.py  _circ_dichro.py  _optim_ar.py  _optim_order.py  _optim_polarizer.py  _plot_unit_cell.py  _test_aniso.py  _test_maxim.py  _test_tangent_field.py  aphi.py  basic.py  camera.py  cd.py  circ_dichro.py  conversion_eff.py  eigenmodes.py  epsilon.py  fields.py  optim_ar.py  symmetry_matrix.py  test_check_complex_rt.py  x.txt  y.txt
nannos/: __about__.py  __init__.py  constants.py  excitation.py  geometry.py  lattice.py  layers.py  log.py  optimize.py  parallel.py  plot.py  sample.py  simulation.py
nannos/formulations/: __init__.py  jones.py  tangent.py
nannos/utils/: __init__.py  helpers.py  jupyter.py  time.py
paper/: Makefile  paper.jats  paper.md
src/nannos/: __about__.py  __init__.py  _jax_eig_workaround.py  _magma.py  constants.py  excitation.py  geometry.py  helpers.py  lattice.py  layers.py  log.py  optimize.py  parallel.py  plot.py  sample.py  simulation.py  time.py
test/: _test_jit.py  batch.py  benchmark_fft.py  benchmarks.py  conda_test.py  convergence.py  custom_jax.py  field.py  plot.py  requirements.txt  test_backend.py  test_gradient.py  test_lattice.py  test_layer.py  test_parallel.py  test_simulation.py  test_tangent.py
test/basic/: test_lattice.py  test_layer.py  test_parallel.py  test_simulation.py  test_tangent.py
test/bk/: test_backend.py  test_gradient.py
test/common/: test_adapt_para.py  test_backend.py  test_geometry.py  test_gradient.py  test_jupyter.py  test_package.py
test/dev/: _test_jit.py  batch.py  benchmark_fft.py  custom_jax.py  fftw.py  para.py  perfs.py  plot.py
test/toeplitz/: dev.py  test2d.py
tutorials/: README.rst  README.txt  plot_gradient.py  plot_layer.py  plot_permittivity_fft.py  plot_shapely.py  plot_tutorial.py  whatever.py
(+53 files in other folders)
