[metadata]
name = nannos
version = 2.5.2
author = Benjamin Vial
email = benjamin.vial84@gmail.com
description = Fourier Modal Method for multilayer metamaterials
url = https://gitlab.com/nannos/nannos
project_urls =
    Code=https://gitlab.com/nannos/nannos
    Documentation=https://nannos.gitlab.io
    Issues=https://gitlab.com/nannos/nannos/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities
keywords =
    fourier modal method
    diffraction
    optics
    photonics
    metamaterials

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy >= 1.9
    scipy >= 1.0
    matplotlib
    autograd >= 1.4
    jax
    jaxlib
    torch
    joblib
    colorlog
    shapely
    psutil
    nlopt
    ipython
    pyvista
    trame
    ipywidgets
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
dependency_links = https://storage.googleapis.com/jax-releases/jax_releases.html


[options.packages.find]
where=src

[options.extras_require]
gpu =
    jax[cuda]
magma = scikit-cuda
