[metadata]
name = nannos
version = 2.6.1
author = Benjamin Vial
email = benjamin.vial84@gmail.com
description = Fourier Modal Method for multilayer metamaterials
url = https://gitlab.com/nannos/nannos
project_urls =
    Code = https://gitlab.com/nannos/nannos
    Documentation = https://nannos.gitlab.io
    Issues = https://gitlab.com/nannos/nannos/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities
keywords =
    fourier modal method
    diffraction
    optics
    photonics
    metamaterials

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy >= 1.9
    scipy >= 1.0
    autograd >= 1.6.2
    torch
    jax
    jaxlib
    joblib
    colorlog
    shapely
    psutil
    ipython
    matplotlib
    pyvista[jupyter] >= 0.43.1
    trame
    ipywidgets
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
dependency_links = 
    https://storage.googleapis.com/jax-releases/jax_releases.html
    https://storage.googleapis.com/jax-releases/jax_cuda_releases.html

[options.extras_require]
gpu =
    jax[cuda12_pip]
magma = scikit-cuda
opt = nlopt
all = 
    nannos[gpu]
    nannos[magma]
    nannos[opt]